# shelfmark-plus

./: Dockerfile  pyproject.toml  readme.md  tor.sh
.github/: dependabot.yml
.github/workflows/: build-and-publish-docker-image.yml  ci.yml  codeql.yml
docs/: environment-variables.md  url-search-parameters.md
patches/shelfmark/core/: activity_routes.py  request_helpers.py
patches/shelfmark/download/outputs/: noop.py
shelfmark/: main.py
shelfmark/config/: env.py  settings.py  users_settings.py
shelfmark/core/: activity_routes.py  auth_modes.py  config.py  image_cache.py  logger.py  notifications.py  request_helpers.py  search_plan.py  self_user_routes.py  text_match.py  user_db.py  utils.py
shelfmark/download/: http.py  permissions_debug.py
shelfmark/download/clients/: deluge.py  rtorrent.py  sabnzbd.py  settings.py  torrent_utils.py
shelfmark/download/outputs/: __init__.py  email.py
shelfmark/download/postprocess/: destination.py  group.py  pipeline.py  transfer.py  workspace.py
shelfmark/metadata_providers/: __init__.py  hardcover.py  openlibrary.py
shelfmark/release_sources/: direct_download.py
shelfmark/release_sources/audiobookbay/: scraper.py  source.py
shelfmark/release_sources/irc/: cache.py  source.py
shelfmark/release_sources/newznab/: source.py
shelfmark/release_sources/prowlarr/: torznab.py
shelfmark/watchlist/: db.py  routes.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.tsx
src/frontend/src/components/: Header.tsx  SearchBar.tsx  SearchSection.tsx  UrlSearchBootstrapMount.tsx
src/frontend/src/components/activity/: ActivityCard.tsx  ActivitySidebar.tsx  activityMappers.ts  activityTypes.ts
src/frontend/src/hooks/: useActivity.ts  useUrlSearch.ts
src/frontend/src/tests/: parseUrlSearchParams.test.ts
src/frontend/src/types/: index.ts
src/frontend/src/utils/: parseUrlSearchParams.ts
tests/audiobookbay/: test_scraper.py
tests/config/: test_download_settings.py  test_tor_script_rules.py
tests/core/: test_admin_users_api.py  test_notifications.py  test_search_plan.py  test_text_match.py  test_utils.py
tests/direct_download/: test_search_queries.py  test_welib_url_allowlist.py
tests/download/: test_postprocess_group.py  test_postprocess_group_integration.py
tests/irc/: test_source.py
tests/prowlarr/: test_rtorrent_client.py  test_torrent_utils.py  test_transmission_client.py
tests/watchlist/: test_watchlist_db.py
